# product-analytics-tool-copilot

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  cohort.py  intent.py  metrics.py  root_cause.py  segmentation.py  sql.py  summary.py  visualization.py
backend/app/api/v1/: chat.py  dashboard.py  memory.py  query.py
backend/app/db/: base.py  repositories.py  session.py
backend/app/graph/: compiler.py  state.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/tasks/: analytics.py  celery_app.py  investigations.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_intent_agent.py  test_sql_validator.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/charts/: ChartRenderer.tsx  CohortHeatmap.tsx
frontend/src/components/chat/: chat-interface.tsx  message.tsx  typing-indicator.tsx
frontend/src/components/dashboard/: InvestigationHistory.tsx  dashboard.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: chat-store.ts
frontend/src/types/: index.ts
infra/prometheus/: prometheus.yml
scripts/: init.sql  seed_data.py
