[project]
name = "ai-product-analytics-copilot"
version = "0.1.0"
description = "AI-powered product analytics copilot for autonomous business investigation"
authors = [
    {name = "AI Product Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.6"
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.7"
langchain-core = "^0.2.9"
langchain-community = "^0.2.0"
google-generativeai = "^0.7.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
sse-starlette = "^2.0.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"
ruff = "^0.3.2"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
factory-boy = "^3.3.0"
faker = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"